# open-genes-api

./: .dockerignore  .env.sample  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  build.sh  docker-compose.yml  generate-changelog.sh  open-genes-backend.sh  open-genes.sh  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: api-demo.yml  api-test.yml  api.yml  codeql-analysis.yml  demo.yml  prod.yml  test.yml
api/: config.py  gene_symbol.json  main.py
api/db/: calorie_experiment_dao.py  dao.py  filters.py  request_handler.py  sorts.py  suggestion_handler.py
api/endpoints/: aging_mechanism.py  calorie_experiment.py  criteria.py  disease.py  functional_cluster.py  gene.py  phylum.py  protein_class.py  protein_classes.py  research.py  root.py
api/entities/: entities.py
api/models/: __init__.py  calorie_experiment.py  gene.py  location.py  myresearch.py  researches.py  various.py
api/presenters/: aging_mechanism.py  calorie_experiment.py  calorie_restriction_experiments.py  comment_cause.py  criteria.py  disease.py  functional_cluster.py  gene.py  human_protein_atlas.py  options.py  origin.py  output.py  phylum.py  protein_class.py  researches.py  studies.py  taxon.py  timestamp.py
experimental/: db_to_pydantic.py  generated_gene.py
opengenes/: config.py  main.py
opengenes/api/: calorie_experiment.py  disease.py  gene.py  params.py
opengenes/db/: dao.py  filters.py  request_handler.py
opengenes/entities/: entities.py
opengenes/presenters/: aging_mechanism.py  comment_cause.py  disease.py  (+7 more)
(+38 files in other folders)
