[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "fastapi~=0.68",
    "uvicorn~=0.15",
    "mysql-connector-python~=8.0",
    "python-dotenv~=0.19",
    "pandas~=1.3",
    "requests~=2.26",
    "deep-translator~=1.5",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8~=3.9",
]
